--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,12 @@
           "ts": "never",
           "tsx": "never"
         }
+      ],
+      "@typescript-eslint/explicit-function-return-type": [
+        "error",
+        {
+          "allowExpressions": true
+        }
       ]
     },
     "settings": {
